Fix email processing, add news author dropdown behind flag

--- a/_/features/features.scss
+++ b/_/features/features.scss
@@ -1,7 +1,3 @@
 .feature {
     display: none !important;
-    
-    &.enabled {
-        display: block !important;
-    }
 }
